# ontosight

./: .gitignore  DEBUG_LOG.md  LICENSE  README.md  README_zh.md  debug_test.py  pyproject.toml  test_api.py
.github/workflows/: publish-pypi.yml
contracts/: README.md  api.openapi.yaml  types.ts
examples/: 01_basic_graph.py  01_basic_graph_1.py  01_graph_galactic_trade.py  02_basic_list.py  02_hypergraph_joint_operations.py  03_advanced_graph_rebel_intelligence.py  03_basic_hypergraph.py  04_advanced_graph.py  04_advanced_hypergraph_biomedical_discovery.py  05_backend_api_test.py  05_nodes_culinary_archive.py  06_advanced_nodes_flavor_clusters.py  06_networkx_example.py  07_graph_isolated_nodes.py  07_pydantic_example.py  08_hypergraph_isolated_nodes.py  EXAMPLES_GUIDE.md  README.md  STATUS.md
frontend/: .eslintrc.json  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  utils.ts
frontend/src/components/: ChatPanel.css  ChatPanel.tsx  DetailPanel.tsx  ErrorBoundary.tsx  FloatingToolbar.tsx  FloatingViewSwitcher.tsx  Layout.css  Layout.tsx  LoadingSpinner.css  LoadingSpinner.tsx  MetaPanel.tsx  SearchPanel.css  SearchPanel.tsx  StatsPanel.tsx  VisualizationRouter.css  VisualizationRouter.tsx
frontend/src/hooks/: useChat.ts  useSearch.ts  useVisualization.ts
frontend/src/services/: api.ts
frontend/src/theme/: visual-config.ts
frontend/src/types/: api.ts
ontosight/: __init__.py  logging_config.py  models.py  utils.py
ontosight/core/: __init__.py  storage.py
ontosight/core/storage/: __init__.py  base.py  graph.py  hypergraph.py  list.py  node.py
ontosight/core/views/: __init__.py  graph.py  hypergraph.py  list.py  node.py
ontosight/server/: __init__.py  app.py  state.py
ontosight/server/models/: __init__.py  api.py
ontosight/server/routes/: __init__.py  chat.py  data.py  meta.py  search.py
ontosight/static/: index.html
ontosight/static/assets/: EdgeListView-D-PVegzc.js  EdgeListView-D-PVegzc.js.map  EdgeListView-DvHGy4Ts.js  EdgeListView-DvHGy4Ts.js.map  GraphView-B2ORp9E0.js  GraphView-B2ORp9E0.js.map  GraphView-BhqoUyfF.js  GraphView-BhqoUyfF.js.map  GraphView-Bmj5blcR.js  GraphView-CY19aDlz.js  GraphView-CY19aDlz.js.map  GraphView-Cmb35wXc.css  GraphView-CpwPXh0l.js  GraphView-DDf8muwR.js  GraphView-DDf8muwR.js.map  GraphView-DR8dcVdy.js  GraphView-DR8dcVdy.js.map  GraphView-DRXEXF1j.js  GraphView-DRXEXF1j.js.map  GraphView-DVzOHGKE.js  GraphView-Dcqc-_P3.js  GraphView-Dggp5kv-.js  GraphView-k9aRtwrC.js  GraphView-k9aRtwrC.js.map  HyperedgeListView-BcmEGw6J.js  HyperedgeListView-BcmEGw6J.js.map  HyperedgeListView-ZGqllV-S.js  HyperedgeListView-ZGqllV-S.js.map  HypergraphView-3x7u6gKG.js  HypergraphView-3x7u6gKG.js.map  HypergraphView-BM60QRrk.js  HypergraphView-BM60QRrk.js.map  HypergraphView-BgVE5cIU.js  (+99 more)
tests/: __init__.py
tests/contract/: test_api_contracts.py
(+50 files in other folders)
