[project]
name = "ontosight"
version = "0.1.0"
description = "OntoSight: A flexible, AI-ready visualization engine for interactive knowledge graphs and hypergraphs."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Yifan Feng", email = "evanfeng97@gmail.com" }]
keywords = [
    "visualization",
    "graph",
    "hypergraph",
    "knowledge-graph",
    "graph-rag",
    "llm-ready",
    "interactive-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",

    # Code quality
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
]

docs = ["mkdocs>=1.5.0", "mkdocs-material>=9.4.0"]

[project.urls]
"Source Code" = "https://github.com/ontosight/ontosight"
"Bug Tracker" = "https://github.com/ontosight/ontosight/issues"
"Documentation" = "https://ontosight.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/ontosight"]
[tool.hatch.build.targets.wheel]
packages = ["ontosight"]

[tool.hatch.build.targets.wheel.force-include]
"ontosight/static" = "ontosight/static"


[tool.hatch.build.targets.sdist.force-include]
"ontosight/static" = "ontosight/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "contract: contract tests",
    "slow: slow running tests",
]

[tool.mypy]
python_version = "3.11"
# strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
target-version = "py311"
line-length = 100
ignore = [
    "E501",   # Line too long (handled by formatter)
    "COM812", # Missing trailing comma
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_hanging_indent = true
line_length = 100
